chore(release): bump 2.0.0-beta.5r1; reorder nav; extend roadmap for comic providers and optional pricing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediavault-frontend",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0-beta.5r1",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
