--- a/app-meta.json
+++ b/app-meta.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0-beta.5r1",
   "build": {
     "gitShaDefault": "dev",
     "buildDateDefault": "unknown"
