--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediavault-backend",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0-beta.5r1",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
