--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediavault-backend",
-  "version": "2.0.0-beta.5r1",
+  "version": "2.0.0-beta.6",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
@@ -12,7 +12,9 @@
     "test:rbac-regression": "node scripts/rbac-regression-check.js",
     "test:cross-type-isolation": "node scripts/cross-type-isolation-check.js",
     "test:migration-rehearsal": "node scripts/migration-rehearsal.js",
-    "test:init-parity": "node scripts/check-init-parity.js"
+    "test:init-parity": "node scripts/check-init-parity.js",
+    "repair:comic-issues": "node scripts/repair-comic-issue-mismatches.js",
+    "repair:comic-posters": "node scripts/repair-comic-posters.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.998.0",
