--- a/env.example
+++ b/env.example
@@ -40,7 +40,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=2.0.0-alpha.9
+APP_VERSION=2.0.0-beta.6
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
@@ -124,6 +124,16 @@ PLEX_PROVIDER=plex
 PLEX_API_URL=
 PLEX_SERVER_NAME=
 PLEX_API_KEY=
+
+# Optional: Comics enrichment API
+COMICS_PRESET=metron
+COMICS_PROVIDER=metron
+COMICS_API_URL=https://metron.cloud/api/issue/
+# For Metron basic auth, set COMICS_USERNAME + COMICS_API_KEY (password/token)
+COMICS_USERNAME=
+COMICS_API_KEY=
+COMICS_API_KEY_HEADER=
+COMICS_API_KEY_QUERY_PARAM=
 # Async Plex import tuning
 # Minimum delay between TMDB enrichment calls during Plex imports (milliseconds)
 TMDB_IMPORT_MIN_INTERVAL_MS=50
