--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediavault-frontend",
-  "version": "2.0.0-beta.5r1",
+  "version": "2.0.0-beta.6",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
