--- a/frontend/src/app-meta.json
+++ b/frontend/src/app-meta.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0-beta.6",
+  "version": "2.0.0-rc.1",
   "build": {
     "gitShaDefault": "dev",
     "buildDateDefault": "unknown"
