--- a/env.example
+++ b/env.example
@@ -38,12 +38,8 @@ ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 # Frontend Configuration
 REACT_APP_API_URL=/api
 
-# Build metadata (optional, recommended for version display)
-# APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=2.0.0-beta.6
-# Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
-GIT_SHA=dev
-BUILD_DATE=unknown
+# App version metadata (optional override; defaults to app-meta.json when unset)
+APP_VERSION=2.0.0-rc.1
 
 # Production/Development
 NODE_ENV=production
