--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,13 +7,9 @@ RUN npm install
 
 COPY . .
 ARG REACT_APP_API_URL=/api
-ARG REACT_APP_VERSION=2.0.0-rc.1
-ARG REACT_APP_GIT_SHA=dev
-ARG REACT_APP_BUILD_DATE=unknown
+ARG REACT_APP_VERSION
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_VERSION=$REACT_APP_VERSION
-ENV REACT_APP_GIT_SHA=$REACT_APP_GIT_SHA
-ENV REACT_APP_BUILD_DATE=$REACT_APP_BUILD_DATE
 RUN npm run build
 
 FROM nginx:alpine
