--- a/env.example
+++ b/env.example
@@ -39,7 +39,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 REACT_APP_API_URL=/api
 
 # App version metadata (optional override; defaults to app-meta.json when unset)
-APP_VERSION=2.0.0-rc.1
+APP_VERSION=2.0.0
 
 # Production/Development
 NODE_ENV=production
