--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediavault-backend",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
